--- a/DQPlayer/Podfile
+++ b/DQPlayer/Podfile
@@ -4,6 +4,8 @@
 target 'DQPlayer' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
 pod 'Masonry', '~> 1.0.2'
+pod 'YYModel', '~> 1.0.4'
+
 
   # use_frameworks!
 
